[project]
name = "falling-fruit-mcp"
version = "0.1.0"
description = "MCP server for Falling Fruit API - find edible plants and trees near you"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "geopy>=2.4.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
